--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import "~leaflet/dist/leaflet.css";
 * {
   margin: 0;
   padding: 0;
